템플릿 리터널 방식으로 수정

--- a/WebContent/function2.html
+++ b/WebContent/function2.html
@@ -12,7 +12,7 @@
 	
 	// 객체 
 	function getSentence({ subject, verb, object }) {
-		return subject+" "+verb+" "+object;
+		return `${subject} ${verb} ${object}`;
 	}
 	
 	const o = {
@@ -26,7 +26,7 @@
 	
 	// 배열 
 	function getSentence_arr([subject, verb, object]){
-		return subject+" "+verb+" "+object;
+		return `${subject} ${verb} ${object}`;
 	}
 	
 	const arr = ["I", "love", "JavaScript"];
