call, apply, bind

--- a/WebContent/function6_call.html
+++ b/WebContent/function6_call.html
@@ -9,6 +9,7 @@
 
 <script>
 	/* 
+		<this의 값을 바꿀 수 있는 함수> - call, apply, bind
 		자바스크립트에서는 this를 함수 어디서, 어떻게 호출했느냐와 관계없이 this가 무엇인지 지정할 수 있음
 		
 		call메서드 : 모든 함수에서 사용할 수 있으며, this를 특정 값으로 지정할 수 있다.
